--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My JavaScript Web</title>
+  <title>My Websites</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello from JavaScript!</h1>
+  <h1>Hello from Internet!</h1>
   <button onclick="sayHello()">Click Me</button>
 
   <p id="output"></p>
