--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 </head>
 <body>
   <h1>Hello from Internet!</h1>
-  <button onclick="sayHello()">Click Me</button>
+  <button onclick="showImage()">Click Me</button>
 
   <p id="output"></p>
-
+  <div id="image-container"></div>
   <script src="script.js"></script>
 </body>
 </html>
