--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <div id="image-container"></div>
   <script src="script.js"></script>
   <video class="corner-video" src="videos/bocchi.mp4" autoplay
-   muted loop></video>
+   loop></video>
 </body>
 </html>
