perubahan index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p id="output"></p>
   <div id="image-container"></div>
   <script src="script.js"></script>
-  <video class="corner-video" src="videos/bocchi.mp4" autoplay
+  <video class="corner-video" src="videos/bocchi.webm" autoplay
    loop></video>
 </body>
 </html>
