perubahan index.html

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
   <div id="image-container"></div>
   <script src="script.js"></script>
   <video class="corner-video" src="videos/bocchi.webm" autoplay
-   loop></video>
+   loop playsinline></video>
 </body>
 </html>
